-> Fixed board active and new page links to threads (patch by atajsic)
-> Fixed files download handling for non-existing mirrors (hajo)
-> Fixed spelling of some words in English translation (hajo)
-> Removed ckeditor and fckeditor filebrowser (hajo)
   The ckeditor mod can be found in the module db from now on
-> Removed version and icon requirements from games mod (hajo)
-> Updated jQuery to 1.9.1


ClanSphere 2011.3 Patch 4 >> 2013-01-28
___________________________________________________________

-- Version and Update Check URLs have changed with this release
-- Earlier releases might not get notified about future changes

-> Added PHP GD Extension version to software overview (hajo)
-> Added rewrite support (Pretty URLs) for Lighttpd and Nginx (hajo)
-> Changed version check download target to show update packages (hajo)
-> Fixed CKEditor image filebrowser for admins in bbcode mode (hajo)
-> Fixed cs_html_img not able to handle basepath image urls (hajo)
-> Fixed files download page errors for non existing entries (hajo)
-> Fixed files listcat showing an empty list of subcategories (hajo)
-> Removed old cvs and svn version information from php files (hajo)
-> Updated CKEditor to 3.6.6
-> Updated CKEditor filebrowser to FCKEditor 2.6.9
-> Updated jQuery to 1.8.3


ClanSphere 2011.3 Patch 3 >> 2013-01-17
___________________________________________________________

>> Security: Fixed language path traversal in core functions (jam2)

-- Recommended PHP version changed to 5.4.10
-- Line and file endings are now unified in the GIT source code repository

-> Added captcha requirement option for users to guestbook mod (hajo)
-> Added delete all comments by userid option to comments mod (hajo)
-> Fixed banner rotation not working with mod rewrite (palle)
-> Fixed board pages translation occuring twice in users home (reported by rapid)
-> Fixed developer themebar path errors for some environments (hajo)